@@ -11,7 +11,7 @@ mod_build=2
 
 #mcp_mappings=snapshot_20171003
 mcp_mappings=snapshot_20170624
-forge_version=14.23.1.2564
+forge_version=14.23.1.2566
 mc_version=1.12.2
 
 jei_version=4.8+
