@@ -5,10 +5,10 @@ import net.minecraft.item.Item;
 
 public class BotaniaIntegration
 {
-	public static Item manaLens;
+	//public static Item manaLens;
 
 	public static void preInit()
 	{
-		manaLens = new ItemManaLens("manaseerLens", ICyberware.EnumSlot.EYES, new String[] { "lens", "link" });
+		//manaLens = new ItemManaLens("manaseerLens", ICyberware.EnumSlot.EYES, new String[] { "lens", "link" });
 	}
 }
