@@ -1,5 +1,6 @@
 package flaxbeard.cyberware.common.integration.botania;
 
+/**
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 
@@ -34,10 +35,11 @@ import vazkii.botania.common.item.ModItems;
 import flaxbeard.cyberware.api.CyberwareAPI;
 import flaxbeard.cyberware.common.CyberwareContent;
 import flaxbeard.cyberware.common.item.ItemCyberware;
+**/
 
-
-public class ItemManaLens extends ItemCyberware
+public class ItemManaLens //extends ItemCyberware
 {
+    /**
 	//private static Method renderCircle = ReflectionHelper.findMethod(BlockHighlightRenderHandler.class, null, new String[] { "renderCircle" }, BlockPos.class, Double.class);
 	//private static Method renderRectangle = ReflectionHelper.findMethod(BlockHighlightRenderHandler.class, null, new String[] { "renderRectangle" }, AxisAlignedBB.class);
 
@@ -152,5 +154,5 @@ public class ItemManaLens extends ItemCyberware
 		GlStateManager.disableBlend();
 		GL11.glPopAttrib();
 		GlStateManager.popMatrix();
-	}
+	} **/
 }
