@@ -8,7 +8,7 @@
   "url": "https://github.com/Flaxbeard/Cyberware",
   "updateUrl": "",
   "authorList": ["Flaxbeard"],
-  "credits": "Thanks to Vazkii, DivineAspect, Yulife, and everyone else who helped out.",
+  "credits": "Thanks to Vazkii, DivineAspect, Yulife, and everyone else who helped out. Additional Thanks to Elucent, An_Sar, and mallrat208 for work on porting to 1.11 and 1.12",
   "logoFile": "",
   "screenshots": []
 }
